# coda-forge-3d

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: quickstart.py
src/codaforge/: __init__.py  __main__.py
src/codaforge/export/: __init__.py  export_manager.py  texture_baking.py
src/codaforge/mesh/: mesh_cleanup.py  mesh_fusion.py
src/codaforge/pipeline/: agni_veda_pipeline.py  checkpoint.py  extract_frames.py  human_masks.py  multiview_keyframes.py  orchestrator.py  quality_check.py  temporal_consistency.py  validation.py
src/codaforge/reconstruction/: __init__.py  ai_reconstruction.py  body_fitting.py  body_volume_estimator.py  camera_calibration.py  config.py  face_reconstruction.py  gaussian_splatting.py  model_registry.py  monocular_depth.py  parametric_body.py  run_colmap.py  scale_estimation.py
src/codaforge/reports/: report_generator.py
src/codaforge/utils/: logger.py  system_check.py
tests/: test_codaforge.py
